# Grokking-Deep-Learning-CPP

./: CMakeLists.txt  README.md
ch06/: CMakeLists.txt  main.cpp
ch08/: CMakeLists.txt  main.cpp  mnist_read.cpp  mnist_read.hpp
ch09/: CMakeLists.txt  main.cpp  main.hpp
ch10/: CMakeLists.txt  main.cpp
ch11/: CMakeLists.txt  main.cpp
imdb/: imdb_read.cpp  imdb_read.hpp
mnist/: mnist_read.cpp  mnist_read.hpp
